<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android BlueTooth Arduino</string>
    <string name="action_settings">Settings</string>
    <string name="Text">Status: -</string>
    <string name="Forward">Forward</string>
    <string name="Back">Back</string>
    <string name="List">Connect</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="Low">Low</string>
    <string name="Medium">Medium</string>
    <string name="High">High</string>
</resources>
